ManagedClient/PftOld/PftParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Pft.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace ManagedClient.Pft {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class PftParser : Parser {
	public const int
		T__38=1, T__37=2, T__36=3, T__35=4, T__34=5, T__33=6, T__32=7, T__31=8, 
		T__30=9, T__29=10, T__28=11, T__27=12, T__26=13, T__25=14, T__24=15, T__23=16, 
		T__22=17, T__21=18, T__20=19, T__19=20, T__18=21, T__17=22, T__16=23, 
		T__15=24, T__14=25, T__13=26, T__12=27, T__11=28, T__10=29, T__9=30, T__8=31, 
		T__7=32, T__6=33, T__5=34, T__4=35, T__3=36, T__2=37, T__1=38, T__0=39, 
		SIGNED=40, UNSIGNED=41, FORMATEXIT=42, FLOAT=43, LITERALQUOTE=44, ESCAPED=45, 
		UNCONDITIONAL=46, CONDITIONAL=47, REPEATABLE=48, FIELD=49, GLOBALVAR=50, 
		MODESWITCH=51, MFNWITHLENGTH=52, INCLUSION=53, COMMANDC=54, COMMANDX=55, 
		A=56, AND=57, AT=58, BANG=59, BREAK=60, COLON=61, COMMA=62, DEBUG=63, 
		ELSE=64, EQUALS=65, ERROR=66, F=67, FATAL=68, FI=69, HASH=70, IF=71, IOCC=72, 
		L=73, LAST=74, LESS=75, LESSEQ=76, LPAREN=77, MFN=78, MINUS=79, MORE=80, 
		MOREEQ=81, NOCC=82, NOT=83, NOTEQUALS=84, OR=85, P=86, PERCENT=87, PLUS=88, 
		RAVR=89, REF=90, RMAX=91, RMIN=92, RPAREN=93, RSUM=94, S=95, SEMICOLON=96, 
		SLASH=97, STAR=98, THEN=99, TILDA=100, TRACE=101, TRIM=102, VAL=103, WARNING=104, 
		WS=105, COMMENT=106;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'beep'", "'left'", "'clientVersion'", "'msg'", "'ask'", 
		"'chr'", "'pad'", "'npost'", "'padright'", "'system'", "'mid'", "'requireClient'", 
		"'tolower'", "'trimright'", "'getenv'", "'size'", "'message'", "'cat'", 
		"'host'", "'port'", "'mstname'", "'toupper'", "'date'", "'database'", 
		"'now'", "'replace'", "'trimleft'", "'user'", "'include'", "'serverVersion'", 
		"'proc'", "'type'", "'padleft'", "'time'", "'right'", "'requireServer'", 
		"'putenv'", "'organization'", "'ord'", "SIGNED", "UNSIGNED", "FORMATEXIT", 
		"FLOAT", "LITERALQUOTE", "ESCAPED", "UNCONDITIONAL", "CONDITIONAL", "REPEATABLE", 
		"FIELD", "GLOBALVAR", "MODESWITCH", "MFNWITHLENGTH", "INCLUSION", "COMMANDC", 
		"COMMANDX", "A", "AND", "'@'", "'!'", "BREAK", "':'", "','", "DEBUG", 
		"ELSE", "'='", "ERROR", "F", "FATAL", "FI", "'$'", "IF", "IOCC", "L", 
		"'LAST'", "'<'", "'<='", "'('", "MFN", "'-'", "'>'", "'>='", "NOCC", "NOT", 
		"'<>'", "OR", "P", "'%'", "'+'", "RAVR", "REF", "RMAX", "RMIN", "')'", 
		"RSUM", "S", "';'", "'/'", "'*'", "THEN", "'~'", "TRACE", "TRIM", "VAL", 
		"WARNING", "WS", "COMMENT"
	};
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_groupStatement = 2, RULE_nonGrouped = 3, 
		RULE_formatElement = 4, RULE_leftHand = 5, RULE_rigthHand = 6, RULE_conditionalStatement = 7, 
		RULE_condition = 8, RULE_stringTest = 9, RULE_arithCondition = 10, RULE_arithExpr = 11, 
		RULE_value = 12, RULE_arithFunction = 13, RULE_fieldPresense = 14;
	public static readonly string[] ruleNames = {
		"program", "statement", "groupStatement", "nonGrouped", "formatElement", 
		"leftHand", "rigthHand", "conditionalStatement", "condition", "stringTest", 
		"arithCondition", "arithExpr", "value", "arithFunction", "fieldPresense"
	};

	public override string GrammarFileName { get { return "Pft.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public PftParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public ITerminalNode Eof() { return GetToken(PftParser.Eof, 0); }
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__38) | (1L << T__37) | (1L << T__36) | (1L << T__35) | (1L << T__34) | (1L << T__33) | (1L << T__32) | (1L << T__30) | (1L << T__29) | (1L << T__28) | (1L << T__27) | (1L << T__26) | (1L << T__25) | (1L << T__24) | (1L << T__22) | (1L << T__21) | (1L << T__20) | (1L << T__19) | (1L << T__18) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__6) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << FORMATEXIT) | (1L << LITERALQUOTE) | (1L << ESCAPED) | (1L << UNCONDITIONAL) | (1L << CONDITIONAL) | (1L << REPEATABLE) | (1L << FIELD) | (1L << GLOBALVAR) | (1L << MODESWITCH) | (1L << MFNWITHLENGTH) | (1L << INCLUSION) | (1L << COMMANDC) | (1L << COMMANDX) | (1L << BANG) | (1L << BREAK) | (1L << COMMA) | (1L << DEBUG))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (ERROR - 66)) | (1L << (F - 66)) | (1L << (FATAL - 66)) | (1L << (HASH - 66)) | (1L << (IF - 66)) | (1L << (IOCC - 66)) | (1L << (LPAREN - 66)) | (1L << (MFN - 66)) | (1L << (NOCC - 66)) | (1L << (PERCENT - 66)) | (1L << (REF - 66)) | (1L << (S - 66)) | (1L << (SLASH - 66)) | (1L << (TRACE - 66)) | (1L << (TRIM - 66)) | (1L << (WARNING - 66)))) != 0)) {
				{
				{
				State = 30; statement();
				}
				}
				State = 35;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 36; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public NonGroupedContext nonGrouped() {
			return GetRuleContext<NonGroupedContext>(0);
		}
		public GroupStatementContext groupStatement() {
			return GetRuleContext<GroupStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 40;
			switch (_input.La(1)) {
			case T__38:
			case T__37:
			case T__36:
			case T__35:
			case T__34:
			case T__33:
			case T__32:
			case T__30:
			case T__29:
			case T__28:
			case T__27:
			case T__26:
			case T__25:
			case T__24:
			case T__22:
			case T__21:
			case T__20:
			case T__19:
			case T__18:
			case T__17:
			case T__16:
			case T__15:
			case T__14:
			case T__13:
			case T__12:
			case T__11:
			case T__10:
			case T__9:
			case T__8:
			case T__7:
			case T__6:
			case T__5:
			case T__4:
			case T__3:
			case T__2:
			case T__1:
			case T__0:
			case FORMATEXIT:
			case LITERALQUOTE:
			case ESCAPED:
			case UNCONDITIONAL:
			case CONDITIONAL:
			case REPEATABLE:
			case FIELD:
			case GLOBALVAR:
			case MODESWITCH:
			case MFNWITHLENGTH:
			case INCLUSION:
			case COMMANDC:
			case COMMANDX:
			case BANG:
			case BREAK:
			case COMMA:
			case DEBUG:
			case ERROR:
			case F:
			case FATAL:
			case HASH:
			case IF:
			case IOCC:
			case MFN:
			case NOCC:
			case PERCENT:
			case REF:
			case S:
			case SLASH:
			case TRACE:
			case TRIM:
			case WARNING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 38; nonGrouped();
				}
				break;
			case LPAREN:
				EnterOuterAlt(_localctx, 2);
				{
				State = 39; groupStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GroupStatementContext : ParserRuleContext {
		public ITerminalNode RPAREN() { return GetToken(PftParser.RPAREN, 0); }
		public NonGroupedContext nonGrouped() {
			return GetRuleContext<NonGroupedContext>(0);
		}
		public ITerminalNode LPAREN() { return GetToken(PftParser.LPAREN, 0); }
		public GroupStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_groupStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterGroupStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitGroupStatement(this);
		}
	}

	[RuleVersion(0)]
	public GroupStatementContext groupStatement() {
		GroupStatementContext _localctx = new GroupStatementContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_groupStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; Match(LPAREN);
			State = 43; nonGrouped();
			State = 44; Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NonGroupedContext : ParserRuleContext {
		public FormatElementContext formatElement(int i) {
			return GetRuleContext<FormatElementContext>(i);
		}
		public FormatElementContext[] formatElement() {
			return GetRuleContexts<FormatElementContext>();
		}
		public NonGroupedContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nonGrouped; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterNonGrouped(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitNonGrouped(this);
		}
	}

	[RuleVersion(0)]
	public NonGroupedContext nonGrouped() {
		NonGroupedContext _localctx = new NonGroupedContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_nonGrouped);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 46; formatElement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 49;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormatElementContext : ParserRuleContext {
		public FormatElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formatElement; } }
	 
		public FormatElementContext() { }
		public virtual void CopyFrom(FormatElementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MsgFunctionContext : FormatElementContext {
		public IToken index;
		public ITerminalNode RPAREN() { return GetToken(PftParser.RPAREN, 0); }
		public ITerminalNode LPAREN() { return GetToken(PftParser.LPAREN, 0); }
		public ITerminalNode UNSIGNED() { return GetToken(PftParser.UNSIGNED, 0); }
		public MsgFunctionContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterMsgFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitMsgFunction(this);
		}
	}
	public partial class BreakOperatorContext : FormatElementContext {
		public ITerminalNode BREAK() { return GetToken(PftParser.BREAK, 0); }
		public BreakOperatorContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterBreakOperator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitBreakOperator(this);
		}
	}
	public partial class MstNameFunctionContext : FormatElementContext {
		public MstNameFunctionContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterMstNameFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitMstNameFunction(this);
		}
	}
	public partial class ServerVersionFunctionContext : FormatElementContext {
		public ServerVersionFunctionContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterServerVersionFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitServerVersionFunction(this);
		}
	}
	public partial class ClientVersionFunctionContext : FormatElementContext {
		public ClientVersionFunctionContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterClientVersionFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitClientVersionFunction(this);
		}
	}
	public partial class SystemFunctionContext : FormatElementContext {
		public NonGroupedContext command;
		public NonGroupedContext nonGrouped() {
			return GetRuleContext<NonGroupedContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(PftParser.RPAREN, 0); }
		public ITerminalNode LPAREN() { return GetToken(PftParser.LPAREN, 0); }
		public SystemFunctionContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterSystemFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitSystemFunction(this);
		}
	}
	public partial class PortFunctionContext : FormatElementContext {
		public PortFunctionContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterPortFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitPortFunction(this);
		}
	}
	public partial class NoccOperatorContext : FormatElementContext {
		public ITerminalNode NOCC() { return GetToken(PftParser.NOCC, 0); }
		public NoccOperatorContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterNoccOperator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitNoccOperator(this);
		}
	}
	public partial class CatFunctionContext : FormatElementContext {
		public NonGroupedContext text;
		public NonGroupedContext nonGrouped() {
			return GetRuleContext<NonGroupedContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(PftParser.RPAREN, 0); }
		public ITerminalNode LPAREN() { return GetToken(PftParser.LPAREN, 0); }
		public CatFunctionContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterCatFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitCatFunction(this);
		}
	}
	public partial class CommandXContext : FormatElementContext {
		public ITerminalNode COMMANDX() { return GetToken(PftParser.COMMANDX, 0); }
		public CommandXContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterCommandX(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitCommandX(this);
		}
	}
	public partial class IncludeFunctionContext : FormatElementContext {
		public NonGroupedContext text;
		public NonGroupedContext nonGrouped() {
			return GetRuleContext<NonGroupedContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(PftParser.RPAREN, 0); }
		public ITerminalNode LPAREN() { return GetToken(PftParser.LPAREN, 0); }
		public IncludeFunctionContext(FormatElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.EnterIncludeFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPftListener typedListener = listener as IPftListener;
			if (typedListener != null) typedListener.ExitIncludeFunction(this);
		}
	}
	public partial class ErrorFunctionContext : FormatElementContext {
		public ITerminalNode RPAREN() { return GetToken(PftParser.RPAREN, 0); }
		public NonGroupedContext nonGrouped() {
			return GetRuleContext<NonGroupedContext>(0);
		}
		public ITerminalNode ERROR() { return GetToken(PftParser.ERROR, 0); }
